force-app/main/default/objects/ObjectTimelineChild__mdt/ObjectTimelineChild__mdt.object-meta.xml
<CustomObject>
    <label>Object Timeline Child</label>
    <pluralLabel>Object Timeline Children</pluralLabel>
</CustomObject>