force-app/main/default/objects/ObjectTimelineChild__mdt/fields/CreateableObject_RecordType__c.field-meta.xml
<CustomField>
	<fullName>CreateableObject_RecordType__c</fullName>
	<description>Write the developer name for the record type (if non-default is needed).
NOT Object.DeveloperName.</description>
	<inlineHelpText>Write the developer name for the record type (if non-default is needed).
NOT Object.DeveloperName.</inlineHelpText>
	<label>Creatable Object - Record Type</label>
	<length>255</length>
	<type>Text</type>
</CustomField>