force-app/main/default/objects/ObjectTimelineChild__mdt/fields/CreateableObject_TextEnglish__c.field-meta.xml
<CustomField>
	<fullName>CreateableObject_TextEnglish__c</fullName>
	<description>E.g., &quot;Log a Call&quot;, &quot;Opportunity&quot;, &quot;Event&quot;</description>
	<inlineHelpText>E.g., &quot;Log a Call&quot;, &quot;Opportunity&quot;, &quot;Event&quot;</inlineHelpText>
	<label>Creatable Object - Text (English)</label>
	<length>255</length>
	<type>Text</type>
</CustomField>