force-app/main/default/objects/ObjectTimelineChild__mdt/fields/CreateableObject_Value1__c.field-meta.xml
<CustomField>
	<fullName>CreateableObject_Value1__c</fullName>
	<description
    >SObject field value, e.g., Type: &quot;Call&quot;, Custom__c: &quot;XYZ&quot;, that will be auto-filled when creating new record of this object and type.</description>
	<inlineHelpText
    >SObject field value, e.g., Type: &quot;Call&quot;, Custom__c: &quot;XYZ&quot;, that will be auto-filled when creating new record of this object and type.</inlineHelpText>
	<label>Creatable Object - Value 1</label>
	<length>255</length>
	<type>Text</type>
</CustomField>