force-app/main/default/objects/ObjectTimelineChild__mdt/fields/SLDS_Timeline_Color__c.field-meta.xml
<CustomField>
	<fullName>SLDS_Timeline_Color__c</fullName>
	<description>HTML color code (use same background color as icon)</description>
	<inlineHelpText>HTML color code (use same background color as icon)</inlineHelpText>
	<label>Timeline Color</label>
	<length>6</length>
	<required>true</required>
	<type>Text</type>
</CustomField>