force-app/main/default/objects/ObjectTimelineChild__mdt/fields/SObjectRelatedUserId__c.field-meta.xml
<CustomField>
	<fullName>SObjectRelatedUserId__c</fullName>
	<description>Put in the SObject Field Name for the related user of the object..
If not empty, the name is prepended to the subtitle.</description>
	<inlineHelpText>Put in the SObject Field Name for the related user of the object..
If not empty, the name is prepended to the subtitle.</inlineHelpText>
	<label>Related User API Name</label>
	<length>255</length>
	<type>Text</type>
</CustomField>