force-app/main/default/objects/ObjectTimelineChild__mdt/fields/SObjectTitle__c.field-meta.xml
<CustomField>
	<fullName>SObjectTitle__c</fullName>
	<description
    >If the SObject that should be queried contains a relevant title field, put the SObject field name here (e.g., Subject, Name, CustomTextField__c)</description>
	<inlineHelpText
    >If the SObject that should be queried contains a relevant title field, put the SObject field name here (e.g., Subject, Name, CustomTextField__c)</inlineHelpText>
	<label>Header API Name</label>
	<length>255</length>
	<required>true</required>
	<type>Text</type>
</CustomField>