force-app/main/default/objects/ObjectTimelineChild__mdt/fields/SObjectTypeField__c.field-meta.xml
<CustomField>
	<fullName>SObjectTypeField__c</fullName>
	<description
    >The SObject field describing the type of object (e.g., Type for Tasks, Inquiry Category for opportunities)</description>
	<inlineHelpText
    >The SObject field describing the type of object (e.g., Type for Tasks, Inquiry Category for opportunities)</inlineHelpText>
	<label>Type API Name</label>
	<length>255</length>
	<type>Text</type>
</CustomField>